--- a/trunk/src/client/pclient.qrc
+++ b/trunk/src/client/pclient.qrc
@@ -1,5 +1,6 @@
 <!DOCTYPE RCC><RCC version="1.0">
 <qresource>
      <file>res/pclient.ico</file>
+     <file>res/hn_logo.png</file>
 </qresource>
 </RCC>
