use wide-logo in foyer-banner
git-svn-id: http://svn.code.sf.net/p/holdingnuts/code/trunk@555 00c8e4f2-bc05-11dd-9892-7df5a783e2f7

--- a/src/client/pclient.qrc
+++ b/src/client/pclient.qrc
@@ -1,5 +1,6 @@
 <!DOCTYPE RCC><RCC version="1.0">
 <qresource>
      <file>res/hn_logo.png</file>
+     <file>res/hn_logo_wide.png</file>
 </qresource>
 </RCC>
